--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li class="nav-item"><a href="#team" class="nav-link">Team</a></li>
 						<li class="nav-item"><a href="#testimonial" class="nav-link">Testimonials</a></li>
 			</ul>
-			<a href="#" class="btn btn-default btn-white" style="border-radius: 20px;">Log In</a>
+			<a href="https://web.bettorleague.ovh/auth/login" class="btn btn-default btn-white" style="border-radius: 20px;">Log In</a>
 	      </div>
 		  </div>
 	  </nav>
